src/test/ui/consts/miri_unleashed/raw_mutable_const.stderr
error: untyped pointers are not allowed in constant
  --> $DIR/raw_mutable_const.rs:7:1
   |
LL | const MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/raw_mutable_const.rs:7:38
   |
LL | const MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   |                                      ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

